crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply_json__test__comprehensive_patch_tests.snap
---
source: crates/forge_app/src/tools/patch/apply_json.rs
expression: test
snapshot_kind: text
---
PatchTest {
    initial: "Hello World",
    operations: [
        PatchOperation {
            search: "World",
            operation: Replace,
            content: "Forge",
            description: "Exact match single word",
        },
        PatchOperation {
            search: "",
            operation: Replace,
            content: " bar",
            description: "Append with empty search",
        },
        PatchOperation {
            search: "foo",
            operation: Replace,
            content: "baz",
            description: "Replaces only first match (with no match)",
        },
        PatchOperation {
            search: "Hello",
            operation: Replace,
            content: "Hi",
            description: "Simple exact matching",
        },
        PatchOperation {
            search: "Hello",
            operation: Replace,
            content: "你好",
            description: "Replace with unicode",
        },
        PatchOperation {
            search: "World",
            operation: Replace,
            content: "🌍",
            description: "Replace with emoji",
        },
        PatchOperation {
            search: "Hello",
            operation: Prepend,
            content: "    ",
            description: "Prepend with whitespace",
        },
        PatchOperation {
            search: "World",
            operation: Append,
            content: "\n  New line",
            description: "Append with newline",
        },
        PatchOperation {
            search: "Hello",
            operation: Prepend,
            content: "Greetings, ",
            description: "Prepend operation",
        },
        PatchOperation {
            search: "World",
            operation: Append,
            content: "!",
            description: "Append operation",
        },
        PatchOperation {
            search: "Hello",
            operation: Swap,
            content: "World",
            description: "Swap operation",
        },
        PatchOperation {
            search: "",
            operation: Prepend,
            content: "Start: ",
            description: "Empty search prepend",
        },
        PatchOperation {
            search: "",
            operation: Append,
            content: " End",
            description: "Empty search append",
        },
        PatchOperation {
            search: "",
            operation: Replace,
            content: "Completely New Content",
            description: "Empty search replace",
        },
    ],
    results: [
        Ok(
            "Hello Forge",
        ),
        Ok(
            " bar",
        ),
        Err(
            "Could not find match for search text: foo",
        ),
        Err(
            "Could not find match for search text: Hello",
        ),
        Err(
            "Could not find match for search text: Hello",
        ),
        Err(
            "Could not find match for search text: World",
        ),
        Err(
            "Could not find match for search text: Hello",
        ),
        Err(
            "Could not find match for search text: World",
        ),
        Err(
            "Could not find match for search text: Hello",
        ),
        Err(
            "Could not find match for search text: World",
        ),
        Err(
            "Could not find match for search text: Hello",
        ),
        Ok(
            "Start:  bar",
        ),
        Ok(
            "Start:  bar End",
        ),
        Ok(
            "Completely New Content",
        ),
    ],
}
