crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply_json__test__empty_search_append.snap
---
source: crates/forge_app/src/tools/patch/apply_json.rs
expression: actual
---
<!-- INITIAL -->Hello World
<!-- REPLACEMENTS -->
<!-- SEARCH -->
<!-- APPEND --> End
<!-- FINAL -->Hello World End
