crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply_json__test__empty_search_prepend.snap
---
source: crates/forge_app/src/tools/patch/apply_json.rs
expression: actual
---
<!-- INITIAL -->Hello World
<!-- REPLACEMENTS -->
<!-- SEARCH -->
<!-- PREPEND -->Start: 
<!-- FINAL -->Start: Hello World
