crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply_json__test__matches_only_first_occurrence.snap
---
source: crates/forge_app/src/tools/patch/apply_json.rs
expression: actual
---
<!-- INITIAL -->foo foox foo
<!-- REPLACEMENTS -->
<!-- SEARCH -->foo
<!-- REPLACE -->bar
<!-- FINAL -->bar foox foo
