crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply_json__test__single_replacement_only.snap
---
source: crates/forge_app/src/tools/patch/apply_json.rs
expression: actual
---
<!-- INITIAL -->outer inner outer
<!-- REPLACEMENTS -->
<!-- SEARCH -->outer inner outer
<!-- REPLACE -->modified inner
<!-- FINAL -->modified inner
